[gd_scene load_steps=31 format=3 uid="uid://cv64d407pajq1"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_3e3jd"]
[ext_resource type="Texture2D" uid="uid://csysjqawnmfrt" path="res://assets/playerbird.png" id="2_nt4sg"]
[ext_resource type="Script" path="res://src/player/player_fsm.gd" id="3_koug7"]
[ext_resource type="Script" path="res://src/player/idle.gd" id="4_5sgm5"]
[ext_resource type="Script" path="res://src/player/move.gd" id="5_bmaea"]
[ext_resource type="Script" path="res://src/player/jump.gd" id="6_cgmje"]
[ext_resource type="Texture2D" uid="uid://bnrc0stqhrb3w" path="res://assets/playerbird_victory.png" id="6_p26wq"]
[ext_resource type="Script" path="res://src/player/glide.gd" id="7_dynfx"]
[ext_resource type="Script" path="res://src/player/fall.gd" id="8_pi5d4"]
[ext_resource type="Texture2D" uid="uid://b2b5ypujqnhjr" path="res://assets/stamina_under.png" id="9_efelf"]
[ext_resource type="Texture2D" uid="uid://5obaqnkiw8hr" path="res://assets/stamina_over.png" id="10_us0gx"]
[ext_resource type="Texture2D" uid="uid://ccnlgkqrnbpml" path="res://assets/stamina_progress.png" id="11_5bwjb"]
[ext_resource type="Texture2D" uid="uid://cgj8160vctfbx" path="res://assets/letter.png" id="12_rt7a8"]
[ext_resource type="FontFile" uid="uid://bwitkp7grmtju" path="res://assets/VCR_OSD_MONO_1.001.ttf" id="13_cso16"]
[ext_resource type="Texture2D" uid="uid://b7v4kujysqj4j" path="res://assets/mailbox.png" id="13_rg8td"]
[ext_resource type="AudioStream" uid="uid://b4m4y5n3txiqs" path="res://assets/sfx/mailbox_full.wav" id="15_k3tu3"]
[ext_resource type="AudioStream" uid="uid://chg4m0354rjvb" path="res://assets/sfx/jump.wav" id="15_sytta"]
[ext_resource type="AudioStream" uid="uid://ja0vpmhb14kv" path="res://assets/sfx/letter_pickup.wav" id="16_xctil"]
[ext_resource type="AudioStream" uid="uid://cq1xmgclkx6k5" path="res://assets/sfx/letter_deposit.wav" id="17_xpqa1"]
[ext_resource type="AudioStream" uid="uid://bqyqt3wufjtk4" path="res://assets/sfx/cherry_pickup.wav" id="19_j56tp"]
[ext_resource type="AudioStream" uid="uid://cvvw3hklfvpjq" path="res://assets/sfx/victory.wav" id="20_xp8xx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvfak"]
size = Vector2(19, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pfbnp"]
size = Vector2(19, 51)

[sub_resource type="Animation" id="Animation_3dsba"]
resource_name = "fall"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 6, 5, 4, 3]
}

[sub_resource type="Animation" id="Animation_cd00g"]
resource_name = "glide"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 12, 13, 14, 13, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_r0xui"]
resource_name = "idle"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_bw7ha"]
resource_name = "fly"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 6, 5, 4, 3]
}

[sub_resource type="Animation" id="Animation_ea46o"]
resource_name = "walk"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_540t8"]
resource_name = "peck"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uxahf"]
_data = {
"fall": SubResource("Animation_3dsba"),
"glide": SubResource("Animation_cd00g"),
"idle": SubResource("Animation_r0xui"),
"jump": SubResource("Animation_bw7ha"),
"move": SubResource("Animation_ea46o"),
"peck": SubResource("Animation_540t8")
}

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
collision_mask = 6
script = ExtResource("1_3e3jd")

[node name="StateLabel" type="Label" parent="."]
visible = false
offset_left = -30.0
offset_top = -57.0
offset_right = 30.0
offset_bottom = -32.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBar" type="TextureProgressBar" parent="."]
modulate = Color(0.0627451, 0.960784, 0, 1)
self_modulate = Color(0.0627451, 0.960784, 0, 1)
offset_left = -25.0
offset_top = 36.0
offset_right = 25.0
offset_bottom = 48.0
max_value = 50.0
texture_under = ExtResource("9_efelf")
texture_over = ExtResource("10_us0gx")
texture_progress = ExtResource("11_5bwjb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_nt4sg")
hframes = 5
vframes = 3
frame = 3

[node name="Sprite2DVictory" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_p26wq")
hframes = 5
vframes = 3
frame = 3

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-3.5, 1.5)
shape = SubResource("RectangleShape2D_dvfak")

[node name="MailboxDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MailboxDetection"]
position = Vector2(-3.5, 1.5)
shape = SubResource("RectangleShape2D_pfbnp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uxahf")
}

[node name="PlayerFSM" type="Node" parent="."]
script = ExtResource("3_koug7")

[node name="Idle" type="Node" parent="PlayerFSM"]
script = ExtResource("4_5sgm5")

[node name="Move" type="Node" parent="PlayerFSM"]
script = ExtResource("5_bmaea")

[node name="Jump" type="Node" parent="PlayerFSM"]
script = ExtResource("6_cgmje")

[node name="Glide" type="Node" parent="PlayerFSM"]
script = ExtResource("7_dynfx")

[node name="Fall" type="Node" parent="PlayerFSM"]
script = ExtResource("8_pi5d4")

[node name="StaminaRegenTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="GlideStaminaTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StaminaIncreaseLabelTimer" type="Timer" parent="."]

[node name="VictoryMessageTimer" type="Timer" parent="."]

[node name="CloseMessageTimer" type="Timer" parent="."]

[node name="LetterUI" type="Sprite2D" parent="."]
position = Vector2(-491, -304)
scale = Vector2(2.43333, 2.66667)
texture = ExtResource("12_rt7a8")

[node name="MailboxUI" type="Sprite2D" parent="."]
position = Vector2(-471, -200)
scale = Vector2(1.35, 1.35)
texture = ExtResource("13_rg8td")
hframes = 3
vframes = 2
frame = 5

[node name="LetterLabel" type="Label" parent="."]
texture_filter = 1
offset_left = -432.0
offset_top = -344.0
offset_right = -322.0
offset_bottom = -264.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_cso16")
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1

[node name="MailboxLabel" type="Label" parent="."]
texture_filter = 1
offset_left = -432.0
offset_top = -239.0
offset_right = -322.0
offset_bottom = -159.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_cso16")
theme_override_font_sizes/font_size = 64
text = "0/5"
vertical_alignment = 1

[node name="StaminaIncreaseLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -110.0
offset_top = -63.0
offset_right = 110.0
offset_bottom = -31.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_cso16")
theme_override_font_sizes/font_size = 32
text = "Stamina up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseMessageLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -280.0
offset_top = -119.0
offset_right = 280.0
offset_bottom = -94.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_cso16")
theme_override_font_sizes/font_size = 24
text = "Press X to close messages."
horizontal_alignment = 1
vertical_alignment = 1

[node name="YouWinMessageLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -556.0
offset_top = 104.0
offset_right = 4.0
offset_bottom = 254.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_cso16")
theme_override_font_sizes/font_size = 24
text = "Thank you for playing!

Made by Matthew Fudge for Ludum Dare 53.

(there's nothing else to complete, but
you can still fly around if you'd like.)
"
vertical_alignment = 1

[node name="YouWinLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -152.0
offset_top = -198.0
offset_right = 152.0
offset_bottom = -118.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_cso16")
theme_override_font_sizes/font_size = 64
text = "You win!"
vertical_alignment = 1

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_sytta")
volume_db = -4.685

[node name="LetterPickupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_xctil")

[node name="LetterDepositSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_xpqa1")
volume_db = -2.811

[node name="MailboxFullSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_k3tu3")

[node name="CherryPickupSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_j56tp")

[node name="VictorySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_xp8xx")

[connection signal="area_entered" from="MailboxDetection" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="MailboxDetection" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="StaminaRegenTimer" to="PlayerFSM" method="_on_stamina_regen_timer_timeout"]
[connection signal="timeout" from="GlideStaminaTimer" to="PlayerFSM/Glide" method="_on_glide_stamina_timer_timeout"]
[connection signal="timeout" from="StaminaIncreaseLabelTimer" to="." method="_on_stamina_increase_label_timer_timeout"]
[connection signal="timeout" from="VictoryMessageTimer" to="." method="_on_victory_message_timer_timeout"]
[connection signal="timeout" from="CloseMessageTimer" to="." method="_on_close_message_timer_timeout"]
